// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomTaskFormDisplayer Test Rendering form 1`] = `
<CustomTaskFormDisplayer
  customForm={
    Object {
      "configuration": Object {
        "resources": Object {
          "scripts": Object {},
          "styles": Object {},
        },
        "schema": "",
      },
      "formInfo": Object {
        "lastModified": 2020-06-12T22:13:20.000Z,
        "name": "travels_VisaApplication",
        "type": "HTML",
      },
      "source": "<div></div>",
    }
  }
  driver={
    Object {
      "doSubmit": [MockFunction],
      "getCustomForm": [MockFunction],
      "getTaskFormSchema": [MockFunction],
    }
  }
  schema={
    Object {
      "$schema": "https://json-schema.org/draft/2019-09/schema",
      "phases": Array [
        "complete",
        "release",
      ],
      "properties": Object {
        "traveller": Object {
          "input": true,
          "output": true,
          "properties": Object {
            "address": Object {
              "properties": Object {
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "street": Object {
                  "type": "string",
                },
                "zipCode": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "email": Object {
              "format": "email",
              "type": "string",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
          },
          "required": Array [
            "firstName",
            "lastName",
          ],
          "type": "object",
        },
        "trip": Object {
          "input": true,
          "properties": Object {
            "begin": Object {
              "format": "date-time",
              "type": "string",
            },
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "end": Object {
              "format": "date-time",
              "type": "string",
            },
            "visaRequired": Object {
              "type": "boolean",
            },
          },
          "type": "object",
        },
        "visaApplication": Object {
          "input": true,
          "properties": Object {
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "duration": Object {
              "type": "integer",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
            "passportNumber": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    }
  }
  user={
    Object {
      "groups": Array [
        "admin",
        "managers",
      ],
      "id": "jdoe",
    }
  }
  userTask={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-06-12T22:13:20.000Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-06-12T22:13:20.000Z,
      "state": "Ready",
    }
  }
>
  <div
    data-ouia-component-type="custom-form-displayer"
    data-ouia-safe={true}
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <Bullseye
      data-ouia-component-id="task-form-envelope-view-loading-spinner"
      data-ouia-component-type="task-form"
      data-ouia-safe={true}
    >
      <div
        className="pf-l-bullseye"
        data-ouia-component-id="task-form-envelope-view-loading-spinner"
        data-ouia-component-type="task-form"
        data-ouia-safe={true}
      >
        <KogitoSpinner
          spinnerText="Loading task form..."
        >
          <MockedComponent />
        </KogitoSpinner>
      </div>
    </Bullseye>
    <Stack
      hasGutter={true}
    >
      <div
        className="pf-l-stack pf-m-gutter"
      >
        <StackItem
          id="testId-form"
          style={
            Object {
              "height": "inherit",
              "visibility": "hidden",
            }
          }
        >
          <div
            className="pf-l-stack__item"
            id="testId-form"
            style={
              Object {
                "height": "inherit",
                "visibility": "hidden",
              }
            }
          >
            <ForwardRef
              context={
                Object {
                  "phases": Array [
                    "complete",
                    "release",
                  ],
                  "schema": Object {
                    "$schema": "https://json-schema.org/draft/2019-09/schema",
                    "properties": Object {
                      "traveller": Object {
                        "input": true,
                        "output": true,
                        "properties": Object {
                          "address": Object {
                            "properties": Object {
                              "city": Object {
                                "type": "string",
                              },
                              "country": Object {
                                "type": "string",
                              },
                              "street": Object {
                                "type": "string",
                              },
                              "zipCode": Object {
                                "type": "string",
                              },
                            },
                            "type": "object",
                          },
                          "email": Object {
                            "format": "email",
                            "type": "string",
                          },
                          "firstName": Object {
                            "type": "string",
                          },
                          "lastName": Object {
                            "type": "string",
                          },
                          "nationality": Object {
                            "type": "string",
                          },
                        },
                        "required": Array [
                          "firstName",
                          "lastName",
                        ],
                        "type": "object",
                      },
                      "trip": Object {
                        "input": true,
                        "properties": Object {
                          "begin": Object {
                            "format": "date-time",
                            "type": "string",
                          },
                          "city": Object {
                            "type": "string",
                          },
                          "country": Object {
                            "type": "string",
                          },
                          "end": Object {
                            "format": "date-time",
                            "type": "string",
                          },
                          "visaRequired": Object {
                            "type": "boolean",
                          },
                        },
                        "type": "object",
                      },
                      "visaApplication": Object {
                        "input": true,
                        "properties": Object {
                          "city": Object {
                            "type": "string",
                          },
                          "country": Object {
                            "type": "string",
                          },
                          "duration": Object {
                            "type": "integer",
                          },
                          "firstName": Object {
                            "type": "string",
                          },
                          "lastName": Object {
                            "type": "string",
                          },
                          "nationality": Object {
                            "type": "string",
                          },
                          "passportNumber": Object {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                    },
                    "type": "object",
                  },
                  "task": Object {
                    "completed": null,
                    "description": null,
                    "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "lastUpdate": 2020-06-12T22:13:20.000Z,
                    "name": "VisaApplication",
                    "priority": "1",
                    "processId": "travels",
                    "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                    "referenceName": "Apply for visa",
                    "rootProcessId": null,
                    "rootProcessInstanceId": null,
                    "started": 2020-06-12T22:13:20.000Z,
                    "state": "Ready",
                  },
                  "user": Object {
                    "groups": Array [
                      "admin",
                      "managers",
                    ],
                    "id": "jdoe",
                  },
                }
              }
              data={
                Object {
                  "NodeName": "Apply for visa",
                  "Priority": "1",
                  "Skippable": "true",
                  "TaskName": "VisaApplication",
                  "traveller": Object {
                    "address": Object {
                      "city": "Zerf",
                      "country": "Poland",
                      "street": "Cabalone",
                      "zipCode": "765756",
                    },
                    "email": "rwhite@gorle.com",
                    "firstName": "Rachel",
                    "lastName": "White",
                    "nationality": "Polish",
                  },
                  "trip": Object {
                    "begin": "2020-02-19T23:00:00.000+01:00",
                    "city": "Boston",
                    "country": "US",
                    "end": "2020-02-26T23:00:00.000+01:00",
                    "visaRequired": true,
                  },
                }
              }
              envelopePath="resources/form-displayer.html"
              formContent={
                Object {
                  "configuration": Object {
                    "resources": Object {
                      "scripts": Object {},
                      "styles": Object {},
                    },
                    "schema": "",
                  },
                  "formInfo": Object {
                    "lastModified": 2020-06-12T22:13:20.000Z,
                    "name": "travels_VisaApplication",
                    "type": "HTML",
                  },
                  "source": "<div></div>",
                }
              }
              onOpenForm={[Function]}
              targetOrigin="http://localhost"
            >
              <ForwardRef(RefForwardingEmbeddedEnvelope)
                apiImpl={
                  Object {
                    "notifyOnOpenForm": [Function],
                  }
                }
                config={
                  Object {
                    "containerType": "iframe",
                    "envelopePath": "resources/form-displayer.html",
                  }
                }
                origin="http://localhost"
                pollInit={[Function]}
                refDelegate={[Function]}
              >
                <iframe
                  src="resources/form-displayer.html"
                  style={
                    Object {
                      "border": "none",
                      "display": "flex",
                      "flex": 1,
                      "flexDirection": "column",
                      "height": "100%",
                      "margin": 0,
                      "overflow": "hidden",
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  title="X"
                />
              </ForwardRef(RefForwardingEmbeddedEnvelope)>
            </ForwardRef>
          </div>
        </StackItem>
      </div>
    </Stack>
  </div>
</CustomTaskFormDisplayer>
`;

exports[`CustomTaskFormDisplayer Test Rendering form 2`] = `
<CustomTaskFormDisplayer
  customForm={
    Object {
      "configuration": Object {
        "resources": Object {
          "scripts": Object {},
          "styles": Object {},
        },
        "schema": "",
      },
      "formInfo": Object {
        "lastModified": 2020-06-12T22:13:20.000Z,
        "name": "travels_VisaApplication",
        "type": "HTML",
      },
      "source": "<div></div>",
    }
  }
  driver={
    Object {
      "doSubmit": [MockFunction],
      "getCustomForm": [MockFunction],
      "getTaskFormSchema": [MockFunction],
    }
  }
  schema={
    Object {
      "$schema": "https://json-schema.org/draft/2019-09/schema",
      "phases": Array [
        "complete",
        "release",
      ],
      "properties": Object {
        "traveller": Object {
          "input": true,
          "output": true,
          "properties": Object {
            "address": Object {
              "properties": Object {
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "street": Object {
                  "type": "string",
                },
                "zipCode": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "email": Object {
              "format": "email",
              "type": "string",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
          },
          "required": Array [
            "firstName",
            "lastName",
          ],
          "type": "object",
        },
        "trip": Object {
          "input": true,
          "properties": Object {
            "begin": Object {
              "format": "date-time",
              "type": "string",
            },
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "end": Object {
              "format": "date-time",
              "type": "string",
            },
            "visaRequired": Object {
              "type": "boolean",
            },
          },
          "type": "object",
        },
        "visaApplication": Object {
          "input": true,
          "properties": Object {
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "duration": Object {
              "type": "integer",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
            "passportNumber": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    }
  }
  user={
    Object {
      "groups": Array [
        "admin",
        "managers",
      ],
      "id": "jdoe",
    }
  }
  userTask={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-06-12T22:13:20.000Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-06-12T22:13:20.000Z,
      "state": "Ready",
    }
  }
>
  <div
    data-ouia-component-type="custom-form-displayer"
    data-ouia-safe={true}
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <Stack
      hasGutter={true}
    >
      <div
        className="pf-l-stack pf-m-gutter"
      >
        <StackItem
          id="testId-form"
          style={
            Object {
              "height": "inherit",
              "visibility": "hidden",
            }
          }
        >
          <div
            className="pf-l-stack__item"
            id="testId-form"
            style={
              Object {
                "height": "inherit",
                "visibility": "hidden",
              }
            }
          >
            <ForwardRef
              context={
                Object {
                  "phases": Array [
                    "complete",
                    "release",
                  ],
                  "schema": Object {
                    "$schema": "https://json-schema.org/draft/2019-09/schema",
                    "properties": Object {
                      "traveller": Object {
                        "input": true,
                        "output": true,
                        "properties": Object {
                          "address": Object {
                            "properties": Object {
                              "city": Object {
                                "type": "string",
                              },
                              "country": Object {
                                "type": "string",
                              },
                              "street": Object {
                                "type": "string",
                              },
                              "zipCode": Object {
                                "type": "string",
                              },
                            },
                            "type": "object",
                          },
                          "email": Object {
                            "format": "email",
                            "type": "string",
                          },
                          "firstName": Object {
                            "type": "string",
                          },
                          "lastName": Object {
                            "type": "string",
                          },
                          "nationality": Object {
                            "type": "string",
                          },
                        },
                        "required": Array [
                          "firstName",
                          "lastName",
                        ],
                        "type": "object",
                      },
                      "trip": Object {
                        "input": true,
                        "properties": Object {
                          "begin": Object {
                            "format": "date-time",
                            "type": "string",
                          },
                          "city": Object {
                            "type": "string",
                          },
                          "country": Object {
                            "type": "string",
                          },
                          "end": Object {
                            "format": "date-time",
                            "type": "string",
                          },
                          "visaRequired": Object {
                            "type": "boolean",
                          },
                        },
                        "type": "object",
                      },
                      "visaApplication": Object {
                        "input": true,
                        "properties": Object {
                          "city": Object {
                            "type": "string",
                          },
                          "country": Object {
                            "type": "string",
                          },
                          "duration": Object {
                            "type": "integer",
                          },
                          "firstName": Object {
                            "type": "string",
                          },
                          "lastName": Object {
                            "type": "string",
                          },
                          "nationality": Object {
                            "type": "string",
                          },
                          "passportNumber": Object {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                    },
                    "type": "object",
                  },
                  "task": Object {
                    "completed": null,
                    "description": null,
                    "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "lastUpdate": 2020-06-12T22:13:20.000Z,
                    "name": "VisaApplication",
                    "priority": "1",
                    "processId": "travels",
                    "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                    "referenceName": "Apply for visa",
                    "rootProcessId": null,
                    "rootProcessInstanceId": null,
                    "started": 2020-06-12T22:13:20.000Z,
                    "state": "Ready",
                  },
                  "user": Object {
                    "groups": Array [
                      "admin",
                      "managers",
                    ],
                    "id": "jdoe",
                  },
                }
              }
              data={
                Object {
                  "NodeName": "Apply for visa",
                  "Priority": "1",
                  "Skippable": "true",
                  "TaskName": "VisaApplication",
                  "traveller": Object {
                    "address": Object {
                      "city": "Zerf",
                      "country": "Poland",
                      "street": "Cabalone",
                      "zipCode": "765756",
                    },
                    "email": "rwhite@gorle.com",
                    "firstName": "Rachel",
                    "lastName": "White",
                    "nationality": "Polish",
                  },
                  "trip": Object {
                    "begin": "2020-02-19T23:00:00.000+01:00",
                    "city": "Boston",
                    "country": "US",
                    "end": "2020-02-26T23:00:00.000+01:00",
                    "visaRequired": true,
                  },
                }
              }
              envelopePath="resources/form-displayer.html"
              formContent={
                Object {
                  "configuration": Object {
                    "resources": Object {
                      "scripts": Object {},
                      "styles": Object {},
                    },
                    "schema": "",
                  },
                  "formInfo": Object {
                    "lastModified": 2020-06-12T22:13:20.000Z,
                    "name": "travels_VisaApplication",
                    "type": "HTML",
                  },
                  "source": "<div></div>",
                }
              }
              onOpenForm={[Function]}
              targetOrigin="http://localhost"
            >
              <ForwardRef(RefForwardingEmbeddedEnvelope)
                apiImpl={
                  Object {
                    "notifyOnOpenForm": [Function],
                  }
                }
                config={
                  Object {
                    "containerType": "iframe",
                    "envelopePath": "resources/form-displayer.html",
                  }
                }
                origin="http://localhost"
                pollInit={[Function]}
                refDelegate={[Function]}
              >
                <iframe
                  src="resources/form-displayer.html"
                  style={
                    Object {
                      "border": "none",
                      "display": "flex",
                      "flex": 1,
                      "flexDirection": "column",
                      "height": "100%",
                      "margin": 0,
                      "overflow": "hidden",
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  title="X"
                />
              </ForwardRef(RefForwardingEmbeddedEnvelope)>
            </ForwardRef>
          </div>
        </StackItem>
        <StackItem>
          <div
            className="pf-l-stack__item"
          >
            <FormFooter
              actions={
                Array [
                  Object {
                    "execute": [Function],
                    "name": "complete",
                  },
                  Object {
                    "execute": [Function],
                    "name": "release",
                  },
                ]
              }
              enabled={true}
            >
              <MockedComponent />
            </FormFooter>
          </div>
        </StackItem>
      </div>
    </Stack>
  </div>
</CustomTaskFormDisplayer>
`;

exports[`CustomTaskFormDisplayer Test Rendering form with error 1`] = `
<CustomTaskFormDisplayer
  customForm={
    Object {
      "configuration": Object {
        "resources": Object {
          "scripts": Object {},
          "styles": Object {},
        },
        "schema": "",
      },
      "formInfo": Object {
        "lastModified": 2020-06-12T22:13:20.000Z,
        "name": "travels_VisaApplication",
        "type": "HTML",
      },
      "source": "<div></div>",
    }
  }
  driver={
    Object {
      "doSubmit": [MockFunction],
      "getCustomForm": [MockFunction],
      "getTaskFormSchema": [MockFunction],
    }
  }
  schema={
    Object {
      "$schema": "https://json-schema.org/draft/2019-09/schema",
      "phases": Array [
        "complete",
        "release",
      ],
      "properties": Object {
        "traveller": Object {
          "input": true,
          "output": true,
          "properties": Object {
            "address": Object {
              "properties": Object {
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "street": Object {
                  "type": "string",
                },
                "zipCode": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "email": Object {
              "format": "email",
              "type": "string",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
          },
          "required": Array [
            "firstName",
            "lastName",
          ],
          "type": "object",
        },
        "trip": Object {
          "input": true,
          "properties": Object {
            "begin": Object {
              "format": "date-time",
              "type": "string",
            },
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "end": Object {
              "format": "date-time",
              "type": "string",
            },
            "visaRequired": Object {
              "type": "boolean",
            },
          },
          "type": "object",
        },
        "visaApplication": Object {
          "input": true,
          "properties": Object {
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "duration": Object {
              "type": "integer",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
            "passportNumber": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    }
  }
  user={
    Object {
      "groups": Array [
        "admin",
        "managers",
      ],
      "id": "jdoe",
    }
  }
  userTask={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-06-12T22:13:20.000Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-06-12T22:13:20.000Z,
      "state": "Ready",
    }
  }
>
  <div
    data-ouia-component-type="custom-form-displayer"
    data-ouia-safe={true}
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <Bullseye
      data-ouia-component-id="task-form-envelope-view-loading-spinner"
      data-ouia-component-type="task-form"
      data-ouia-safe={true}
    >
      <div
        className="pf-l-bullseye"
        data-ouia-component-id="task-form-envelope-view-loading-spinner"
        data-ouia-component-type="task-form"
        data-ouia-safe={true}
      >
        <KogitoSpinner
          spinnerText="Loading task form..."
        >
          <MockedComponent />
        </KogitoSpinner>
      </div>
    </Bullseye>
    <Stack
      hasGutter={true}
    >
      <div
        className="pf-l-stack pf-m-gutter"
      >
        <StackItem
          id="testId-form"
          style={
            Object {
              "height": "inherit",
              "visibility": "hidden",
            }
          }
        >
          <div
            className="pf-l-stack__item"
            id="testId-form"
            style={
              Object {
                "height": "inherit",
                "visibility": "hidden",
              }
            }
          >
            <ForwardRef
              context={
                Object {
                  "phases": Array [
                    "complete",
                    "release",
                  ],
                  "schema": Object {
                    "$schema": "https://json-schema.org/draft/2019-09/schema",
                    "properties": Object {
                      "traveller": Object {
                        "input": true,
                        "output": true,
                        "properties": Object {
                          "address": Object {
                            "properties": Object {
                              "city": Object {
                                "type": "string",
                              },
                              "country": Object {
                                "type": "string",
                              },
                              "street": Object {
                                "type": "string",
                              },
                              "zipCode": Object {
                                "type": "string",
                              },
                            },
                            "type": "object",
                          },
                          "email": Object {
                            "format": "email",
                            "type": "string",
                          },
                          "firstName": Object {
                            "type": "string",
                          },
                          "lastName": Object {
                            "type": "string",
                          },
                          "nationality": Object {
                            "type": "string",
                          },
                        },
                        "required": Array [
                          "firstName",
                          "lastName",
                        ],
                        "type": "object",
                      },
                      "trip": Object {
                        "input": true,
                        "properties": Object {
                          "begin": Object {
                            "format": "date-time",
                            "type": "string",
                          },
                          "city": Object {
                            "type": "string",
                          },
                          "country": Object {
                            "type": "string",
                          },
                          "end": Object {
                            "format": "date-time",
                            "type": "string",
                          },
                          "visaRequired": Object {
                            "type": "boolean",
                          },
                        },
                        "type": "object",
                      },
                      "visaApplication": Object {
                        "input": true,
                        "properties": Object {
                          "city": Object {
                            "type": "string",
                          },
                          "country": Object {
                            "type": "string",
                          },
                          "duration": Object {
                            "type": "integer",
                          },
                          "firstName": Object {
                            "type": "string",
                          },
                          "lastName": Object {
                            "type": "string",
                          },
                          "nationality": Object {
                            "type": "string",
                          },
                          "passportNumber": Object {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                    },
                    "type": "object",
                  },
                  "task": Object {
                    "completed": null,
                    "description": null,
                    "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "lastUpdate": 2020-06-12T22:13:20.000Z,
                    "name": "VisaApplication",
                    "priority": "1",
                    "processId": "travels",
                    "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                    "referenceName": "Apply for visa",
                    "rootProcessId": null,
                    "rootProcessInstanceId": null,
                    "started": 2020-06-12T22:13:20.000Z,
                    "state": "Ready",
                  },
                  "user": Object {
                    "groups": Array [
                      "admin",
                      "managers",
                    ],
                    "id": "jdoe",
                  },
                }
              }
              data={
                Object {
                  "NodeName": "Apply for visa",
                  "Priority": "1",
                  "Skippable": "true",
                  "TaskName": "VisaApplication",
                  "traveller": Object {
                    "address": Object {
                      "city": "Zerf",
                      "country": "Poland",
                      "street": "Cabalone",
                      "zipCode": "765756",
                    },
                    "email": "rwhite@gorle.com",
                    "firstName": "Rachel",
                    "lastName": "White",
                    "nationality": "Polish",
                  },
                  "trip": Object {
                    "begin": "2020-02-19T23:00:00.000+01:00",
                    "city": "Boston",
                    "country": "US",
                    "end": "2020-02-26T23:00:00.000+01:00",
                    "visaRequired": true,
                  },
                }
              }
              envelopePath="resources/form-displayer.html"
              formContent={
                Object {
                  "configuration": Object {
                    "resources": Object {
                      "scripts": Object {},
                      "styles": Object {},
                    },
                    "schema": "",
                  },
                  "formInfo": Object {
                    "lastModified": 2020-06-12T22:13:20.000Z,
                    "name": "travels_VisaApplication",
                    "type": "HTML",
                  },
                  "source": "<div></div>",
                }
              }
              onOpenForm={[Function]}
              targetOrigin="http://localhost"
            >
              <ForwardRef(RefForwardingEmbeddedEnvelope)
                apiImpl={
                  Object {
                    "notifyOnOpenForm": [Function],
                  }
                }
                config={
                  Object {
                    "containerType": "iframe",
                    "envelopePath": "resources/form-displayer.html",
                  }
                }
                origin="http://localhost"
                pollInit={[Function]}
                refDelegate={[Function]}
              >
                <iframe
                  src="resources/form-displayer.html"
                  style={
                    Object {
                      "border": "none",
                      "display": "flex",
                      "flex": 1,
                      "flexDirection": "column",
                      "height": "100%",
                      "margin": 0,
                      "overflow": "hidden",
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  title="X"
                />
              </ForwardRef(RefForwardingEmbeddedEnvelope)>
            </ForwardRef>
          </div>
        </StackItem>
      </div>
    </Stack>
  </div>
</CustomTaskFormDisplayer>
`;

exports[`CustomTaskFormDisplayer Test Rendering form with error 2`] = `
<CustomTaskFormDisplayer
  customForm={
    Object {
      "configuration": Object {
        "resources": Object {
          "scripts": Object {},
          "styles": Object {},
        },
        "schema": "",
      },
      "formInfo": Object {
        "lastModified": 2020-06-12T22:13:20.000Z,
        "name": "travels_VisaApplication",
        "type": "HTML",
      },
      "source": "<div></div>",
    }
  }
  driver={
    Object {
      "doSubmit": [MockFunction],
      "getCustomForm": [MockFunction],
      "getTaskFormSchema": [MockFunction],
    }
  }
  schema={
    Object {
      "$schema": "https://json-schema.org/draft/2019-09/schema",
      "phases": Array [
        "complete",
        "release",
      ],
      "properties": Object {
        "traveller": Object {
          "input": true,
          "output": true,
          "properties": Object {
            "address": Object {
              "properties": Object {
                "city": Object {
                  "type": "string",
                },
                "country": Object {
                  "type": "string",
                },
                "street": Object {
                  "type": "string",
                },
                "zipCode": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "email": Object {
              "format": "email",
              "type": "string",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
          },
          "required": Array [
            "firstName",
            "lastName",
          ],
          "type": "object",
        },
        "trip": Object {
          "input": true,
          "properties": Object {
            "begin": Object {
              "format": "date-time",
              "type": "string",
            },
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "end": Object {
              "format": "date-time",
              "type": "string",
            },
            "visaRequired": Object {
              "type": "boolean",
            },
          },
          "type": "object",
        },
        "visaApplication": Object {
          "input": true,
          "properties": Object {
            "city": Object {
              "type": "string",
            },
            "country": Object {
              "type": "string",
            },
            "duration": Object {
              "type": "integer",
            },
            "firstName": Object {
              "type": "string",
            },
            "lastName": Object {
              "type": "string",
            },
            "nationality": Object {
              "type": "string",
            },
            "passportNumber": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    }
  }
  user={
    Object {
      "groups": Array [
        "admin",
        "managers",
      ],
      "id": "jdoe",
    }
  }
  userTask={
    Object {
      "actualOwner": null,
      "adminGroups": Array [],
      "adminUsers": Array [],
      "completed": null,
      "description": null,
      "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "excludedUsers": Array [],
      "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
      "lastUpdate": 2020-06-12T22:13:20.000Z,
      "name": "VisaApplication",
      "outputs": "{}",
      "potentialGroups": Array [],
      "potentialUsers": Array [],
      "priority": "1",
      "processId": "travels",
      "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
      "referenceName": "Apply for visa",
      "rootProcessId": null,
      "rootProcessInstanceId": null,
      "started": 2020-06-12T22:13:20.000Z,
      "state": "Ready",
    }
  }
>
  <div
    data-ouia-component-type="custom-form-displayer"
    data-ouia-safe={true}
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <Stack
      hasGutter={true}
    >
      <div
        className="pf-l-stack pf-m-gutter"
      >
        <StackItem
          id="testId-form"
          style={
            Object {
              "height": "inherit",
              "visibility": "hidden",
            }
          }
        >
          <div
            className="pf-l-stack__item"
            id="testId-form"
            style={
              Object {
                "height": "inherit",
                "visibility": "hidden",
              }
            }
          >
            <ForwardRef
              context={
                Object {
                  "phases": Array [
                    "complete",
                    "release",
                  ],
                  "schema": Object {
                    "$schema": "https://json-schema.org/draft/2019-09/schema",
                    "properties": Object {
                      "traveller": Object {
                        "input": true,
                        "output": true,
                        "properties": Object {
                          "address": Object {
                            "properties": Object {
                              "city": Object {
                                "type": "string",
                              },
                              "country": Object {
                                "type": "string",
                              },
                              "street": Object {
                                "type": "string",
                              },
                              "zipCode": Object {
                                "type": "string",
                              },
                            },
                            "type": "object",
                          },
                          "email": Object {
                            "format": "email",
                            "type": "string",
                          },
                          "firstName": Object {
                            "type": "string",
                          },
                          "lastName": Object {
                            "type": "string",
                          },
                          "nationality": Object {
                            "type": "string",
                          },
                        },
                        "required": Array [
                          "firstName",
                          "lastName",
                        ],
                        "type": "object",
                      },
                      "trip": Object {
                        "input": true,
                        "properties": Object {
                          "begin": Object {
                            "format": "date-time",
                            "type": "string",
                          },
                          "city": Object {
                            "type": "string",
                          },
                          "country": Object {
                            "type": "string",
                          },
                          "end": Object {
                            "format": "date-time",
                            "type": "string",
                          },
                          "visaRequired": Object {
                            "type": "boolean",
                          },
                        },
                        "type": "object",
                      },
                      "visaApplication": Object {
                        "input": true,
                        "properties": Object {
                          "city": Object {
                            "type": "string",
                          },
                          "country": Object {
                            "type": "string",
                          },
                          "duration": Object {
                            "type": "integer",
                          },
                          "firstName": Object {
                            "type": "string",
                          },
                          "lastName": Object {
                            "type": "string",
                          },
                          "nationality": Object {
                            "type": "string",
                          },
                          "passportNumber": Object {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                    },
                    "type": "object",
                  },
                  "task": Object {
                    "completed": null,
                    "description": null,
                    "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                    "lastUpdate": 2020-06-12T22:13:20.000Z,
                    "name": "VisaApplication",
                    "priority": "1",
                    "processId": "travels",
                    "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                    "referenceName": "Apply for visa",
                    "rootProcessId": null,
                    "rootProcessInstanceId": null,
                    "started": 2020-06-12T22:13:20.000Z,
                    "state": "Ready",
                  },
                  "user": Object {
                    "groups": Array [
                      "admin",
                      "managers",
                    ],
                    "id": "jdoe",
                  },
                }
              }
              data={
                Object {
                  "NodeName": "Apply for visa",
                  "Priority": "1",
                  "Skippable": "true",
                  "TaskName": "VisaApplication",
                  "traveller": Object {
                    "address": Object {
                      "city": "Zerf",
                      "country": "Poland",
                      "street": "Cabalone",
                      "zipCode": "765756",
                    },
                    "email": "rwhite@gorle.com",
                    "firstName": "Rachel",
                    "lastName": "White",
                    "nationality": "Polish",
                  },
                  "trip": Object {
                    "begin": "2020-02-19T23:00:00.000+01:00",
                    "city": "Boston",
                    "country": "US",
                    "end": "2020-02-26T23:00:00.000+01:00",
                    "visaRequired": true,
                  },
                }
              }
              envelopePath="resources/form-displayer.html"
              formContent={
                Object {
                  "configuration": Object {
                    "resources": Object {
                      "scripts": Object {},
                      "styles": Object {},
                    },
                    "schema": "",
                  },
                  "formInfo": Object {
                    "lastModified": 2020-06-12T22:13:20.000Z,
                    "name": "travels_VisaApplication",
                    "type": "HTML",
                  },
                  "source": "<div></div>",
                }
              }
              onOpenForm={[Function]}
              targetOrigin="http://localhost"
            >
              <ForwardRef(RefForwardingEmbeddedEnvelope)
                apiImpl={
                  Object {
                    "notifyOnOpenForm": [Function],
                  }
                }
                config={
                  Object {
                    "containerType": "iframe",
                    "envelopePath": "resources/form-displayer.html",
                  }
                }
                origin="http://localhost"
                pollInit={[Function]}
                refDelegate={[Function]}
              >
                <iframe
                  src="resources/form-displayer.html"
                  style={
                    Object {
                      "border": "none",
                      "display": "flex",
                      "flex": 1,
                      "flexDirection": "column",
                      "height": "100%",
                      "margin": 0,
                      "overflow": "hidden",
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  title="X"
                />
              </ForwardRef(RefForwardingEmbeddedEnvelope)>
            </ForwardRef>
          </div>
        </StackItem>
      </div>
    </Stack>
  </div>
</CustomTaskFormDisplayer>
`;
